@@ -1,2 +1,0 @@
-# Project considered to be dead.
-cjk source: debian-watch-file-is-missing
