@@ -1,0 +1,2 @@
+version=4
+http://mirrors.ctan.org/language/chinese/CJK/cjk-(\d\.\d\.\d)\.tar.gz
