@@ -4,6 +4,8 @@ cjk (4.8.4+git20170127-5) UNRELEASED; urgency=medium
   * https://github.com/debian-tex/cjk/pull/1
 
   * Remove obsolete Suggests for latex-cjk-chinese & latex-cjk-japanese.
+  * Introduce d/watch, remove Lintian override, re-enable get-orig-source
+    target in d/rules.
 
  -- Hilmar Preusse <hille42@web.de>  Wed, 19 Jan 2022 12:24:44 +0100
 
